# spoti-dl

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  Pipfile  README.md  main.py  pyproject.toml  requirements.txt  sp_experimental.py
.github/workflows/: test.yml  test_pypi.yml
app/: cli.py  config.py  exceptions.py  main.py  metadata.py  sp_experimental.py  spotify.py  utils.py  youtube.py
spotidl/: __init__.py  cli.py  config.py  downloader.py  exceptions.py  main.py  metadata.py  spotify.py  utils.py  youtube.py
src/: downloader.rs  lib.rs  metadata.rs  spotify.rs  types.rs  utils.rs
tests/: test_cli_args.py  test_downloader.py  test_main.py  test_metadata.py  test_spotify.py  test_utils.py  test_youtube.py
yASD/: cli.py  exceptions.py  main.py  spotify.py  utils.py  youtube.py
yasd/: cli.py  config.py  metadata.py  spotify.py  utils.py  youtube.py
