[package]
name = "spoti-dl"
version = "2.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "spotidl_rs"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19", features = ["extension-module"] }
pyo3-asyncio = { version = "0.19", features = ["tokio-runtime"] }
tokio = "1"
rspotify = {version = "0.12.0", features = ["cli"]} 
chrono = "0.4"
youtube_dl = "0.9"