[tool.poetry]
name = "spoti-dl"
version = "2.0.0"
description = "spotidl: download songs, albums and playlists using Spotify links"
authors = ["Dhruv"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/good-times-ahead/spoti-dl/"
repository = "https://github.com/good-times-ahead/spoti-dl/"
packages = [
    {include = "spotidl"}
]
# TODO: add more classifiers
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
python-dotenv = "^0.19.2"
maturin = "^1.2.3"
spotipy = "^2.23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pyfakefs = "^4.5.6"
pytest = "7.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry.scripts]
spotidl = "spotidl.main:cli"

[tool.maturin]
features = ["pyo3/extension-module"]
