[tool.poetry]
name = "spoti-dl"
version = "2.0.0"
description = "spotidl: download songs, albums and playlists using Spotify links"
authors = ["Dhruv"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/dhruv-ahuja/spoti-dl/"
repository = "https://github.com/dhruv-ahuja/spoti-dl/"
packages = [
    {include = "spotidl"}
]
# TODO: add more classifiers
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
python-dotenv = "^0.19.2"
maturin = "^1.2.3"
spotipy = "^2.23.0"

[tool.poetry.group.dev.dependencies]
black = "^23.9.1"
pyfakefs = "^4.5.6"
pytest = "7.2.0"
pytest-cov = "^3.0.0"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.poetry.scripts]
spotidl = "spotidl.main:cli"

# [project.entry-points."spotidl"]
# main = "spotidl.main:cli"


# * rust config 
# [build-system]
# requires = ["setuptools", "setuptools-rust", "wheel"]
# build-backend = "setuptools.build_meta"

[project]
name = "spoti-dl"
version = "2.0.0"
# dependencies = ["setuptools-rust"]
dependencies = ["spotipy", "python-dotenv"]
requires-python = ">=3.8"
license = { file = "LICENSE" }
readme = "README.md"

[project.urls]
repository = "https://github.com/dhruv-ahuja/spoti-dl/"

[project.scripts]
spotidl = "spotidl.main:cli"

# [tool.setuptools.packages]
# # Pure Python packages/modules
# find = { where = ["spotidl"] }

# [[tool.setuptools-rust.ext-modules]]
# # Private Rust extension module to be nested into Python package
# target = "spotidl_rs"  # The last part of the name (e.g. "_lib") has to match lib.name in Cargo.toml,
#                              # but you can add a prefix to nest it inside of a Python package.
# py-limited-api = "auto"  # Default value, can be omitted
# binding = "PyO3"  # Default value, can be omitted
# # See reference for RustExtension in https://setuptools-rust.readthedocs.io/en/latest/reference.html

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["spotidl"]