# * native python configuration
[project]
name = "spoti-dl"
version = "2.0.0"
description = "spoti-dl: download songs, albums and playlists using Spotify links"
dependencies = ["spotipy==2.23.0", "python-dotenv==1.0.0", "yt-dlp>=2023.10.13"]
requires-python = ">=3.8"
license = { file = "LICENSE"}
readme = "README.md"
authors = [
    {name = "Dhruv Ahuja"}
]
classifiers = [
    "Programming Language :: Rust",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Multimedia :: Sound/Audio", 
    "Environment :: Console",
]

[project.urls]
repository = "https://github.com/dhruv-ahuja/spoti-dl/"

[project.optional-dependencies]
dev = ["black"]
test = ["pytest"]

# * rust configuration 
[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[tool.maturin]
features = ["pyo3/extension-module"]
python-packages = ["spotidl"]
module-name = "spotidl.spotidl_rs"

# this is required to invoke the app as intended
[project.scripts]
spoti-dl = "spotidl.main:main"